--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,35 @@
 .App-link {
   color: #09d3ac;
 }
+
+.counter {
+  text-align: center;
+  font-size: 30px;
+}
+
+.wrapper {
+  width: 340px;
+  margin: 50px auto 10px auto;
+}
+
+.item {
+  border: 2px grey dotted;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  margin: 0 3px 2px 3px;
+  text-align: center;
+  overflow: hidden;
+  display: inline-block;
+}
+
+.photo {
+  width: 100%;
+  height: 110%;
+  align-self: center;
+  visibility: hidden;
+}
+
+.show {
+  visibility: visible;
+}
